@@ -1,3 +1,9 @@
+ags (3.0.8)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixes to WASAPI backend
+	* fixes to CoreAudio backend
+
 ags (3.0.7)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
